# flipt

./: .gitignore  WORKSPACE  docker-compose.yml  go.mod
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
rpc/: BUILD.bazel  flipt.proto
